# lime

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Makefile  Makefile.defs  Makefile.srcs  NEWS.md  README  README-CAVITYWALLS.md  README.md  casarc.sh  configure  lime  mkdocs.yml  pylimerc.csh  pylimerc.sh  pyrc.csh  pyrc.sh  readMe  sourceme.bash  sourceme.csh
.svn/: all-wcprops  entries
.svn/text-base/: README.svn-base  lime_cs.pdf.svn-base
.svn/tmp/: Makefile.2.tmp  Makefile.tmp  tempfile.2.tmp
abundance_grid/: convert.f  convert.sh  convert.x  grid_interpol.f  grid_interpol.x  makefile
benchmarks/: README.md
benchmarks/model1/: check.py  model1a.c  model1b.c
casa/: README.txt  casa_test.py  limesolver.template  limesolver.xml  raytrace.template  raytrace.xml  task_limesolver.py  task_limesolver_ARTIST.py  task_raytrace.py
data/: jena_thin_e6.tab
doc/: conf.py  index.md  index.rst  pylimes.rst  usermanual.md  usermanual.rst
doc/example/: input.ini  input.ini.in  model.py
example/: model.c  model.py  model_pyshared.py
example/.svn/: all-wcprops  entries
hh46-co/: dusttemp.h  grid_interpol.x  model.c  tgasgrid.k99.h  uvflux.h
include/: lime.h
python/: casalime_read.py  lime.py  limepar_classes.py  modellib.py  modellib_classes.py  modellib_utils.py  par_classes.py
src/: LTEsolution.c  aux.c  aux.h  casa_messages.c  casalime.c  casalime.h  casaray.c  collparts.c  collparts.h  constants.h  curses.c  curses_msg.c  defaults.c  defaults.h  diagnostics.c  dims.h  dust.c  error_codes.h  fastexp.c  frees.c  getclosest.c  grid.c  grid2fits.c  grid2fits.h  grid2hdf5.c  grid2hdf5.h  grid_aux.c  gridconvert.c  gridio.c  gridio.h  init.c  inpars.h  lime.h  lime_config.h  lime_defaults.c  ll_main.c  local_err.h  magfieldfit.c  main.c  messages.c  (+47 more)
src/.svn/: all-wcprops  entries
src/ml_recipes/: ml_recipes.h  model_Al03.c  model_BoEb56.c  model_CG97.c  model_DDN01.c  model_LiSh96.c  (+4 more)
tests/: casalime_test.py  pyshared_test.py
(+12 files in other folders)
